exports[`Event should render a counter if a count is given 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 4,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 24,
        "marginTop": 23,
        "paddingBottom": 20,
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingTop": 20,
      }
    }>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#999",
            "borderRadius": 56,
            "height": 56,
            "marginRight": 16,
            "overflow": "visible",
            "width": 56,
          }
        }>
        <Image
          source={23}
          style={
            Object {
              "borderRadius": 56,
              "height": 56,
              "width": 56,
            }
          } />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "rgba(246, 111, 63, 0.95)",
            "borderRadius": 20,
            "height": 20,
            "left": 38,
            "position": "absolute",
            "top": -4,
            "width": 20,
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Object {
                "color": "#fff",
                "fontFamily": "Brandon Text_bold",
                "fontSize": 12,
                "fontWeight": "bold",
              },
            ]
          }>
          23
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "paddingTop": 3,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text_bold",
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }>
        pew pew pew
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#80979a",
              "fontSize": 15,
              "textAlign": "left",
            },
          ]
        }>
        i am a blurb
      </Text>
    </View>
  </View>
</TouchableNativeFeedback>
`;

exports[`Event should render a formatted date if the blurb is undefined 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 4,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 24,
        "marginTop": 23,
        "paddingBottom": 20,
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingTop": 20,
      }
    }>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#999",
            "borderRadius": 56,
            "height": 56,
            "marginRight": 16,
            "overflow": "visible",
            "width": 56,
          }
        }>
        <Image
          source={23}
          style={
            Object {
              "borderRadius": 56,
              "height": 56,
              "width": 56,
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "paddingTop": 3,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text_bold",
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }>
        pew pew pew
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#80979a",
              "fontSize": 15,
              "textAlign": "left",
            },
          ]
        }>
        Friday 16th, September 2016
      </Text>
    </View>
  </View>
</TouchableNativeFeedback>
`;

exports[`Event should render the props 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 4,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 24,
        "marginTop": 23,
        "paddingBottom": 20,
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingTop": 20,
      }
    }>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#999",
            "borderRadius": 56,
            "height": 56,
            "marginRight": 16,
            "overflow": "visible",
            "width": 56,
          }
        }>
        <Image
          source={23}
          style={
            Object {
              "borderRadius": 56,
              "height": 56,
              "width": 56,
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "paddingTop": 3,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text_bold",
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }>
        pew pew pew
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#80979a",
              "fontSize": 15,
              "textAlign": "left",
            },
          ]
        }>
        i am a blurb
      </Text>
    </View>
  </View>
</TouchableNativeFeedback>
`;

exports[`Event should render with a "more" indicator if onPress is given 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 4,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 24,
        "marginTop": 23,
        "paddingBottom": 20,
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingTop": 20,
      }
    }>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#999",
            "borderRadius": 56,
            "height": 56,
            "marginRight": 16,
            "overflow": "visible",
            "width": 56,
          }
        }>
        <Image
          source={23}
          style={
            Object {
              "borderRadius": 56,
              "height": 56,
              "width": 56,
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "paddingTop": 3,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text_bold",
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlign": "left",
            },
          ]
        }>
        pew pew pew
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": "#80979a",
              "fontSize": 15,
              "textAlign": "left",
            },
          ]
        }>
        i am a blurb
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }>
      <Image
        source={1} />
    </View>
  </View>
</TouchableNativeFeedback>
`;
